# HiPSter

./: .gitignore  README.md  check_hips.ipynb  config.yaml  pyproject.toml  spectrum_plotter.ipynb  test.ipynb
.github/workflows/: container-publish.yml  python-package.yml  release.yml
aladin-lite/: aladin.js  index.html  test.py
detail_page_on_demand/: Containerfile  README.txt  app.py  plot_on_demand.py  requirements.txt
devel/: catalog.ipynb  catalog.vot  gaia_explore_data.ipynb  hips.ipynb  make_gaia.py  make_gaia_catalog.py  make_gaia_hips.py  onnxruntime.ipynb  plot_on_demand.py  spectrum_plotter.ipynb  split_parquet.py
examples/: config.yaml
src/hipster/: __init__.py  absorption_line_plotter.py  catalog_generator.py  create_allsky.py  generate_hips.py  hips_generator.py  hipster.py  html_generator.py  image_generator.py  image_plotter.py  inference.py  main.py  reconstruction.py  spectrum_plotter.py  task.py  votable_generator.py  wavelength_to_rgb.py
src/hipster/templates/: index.html
tests/: conftest.py  test_catalog.py  test_generate_hips.py  test_hips_generator.py  test_hipster.py  test_image_generator.py  test_inference.py  test_reconstruction.py  test_spectrum_plotter.py
tests/data/XpSampledMeanSpectrum/: part.0.parquet  part.1.parquet
tests/data/gaia/: part.0.parquet  part.1.parquet
tests/models/: illustris_decoder.onnx  vae_decoder.onnx  vae_encoder.onnx
