[tool.poetry]
name = "hipster"
version = "0.1.0"
description = "Create HiPS tiles from PyTorch models"
authors = [
    "Kai Polsterer <kai.polsterer@h-its.org>",
    "Bernd Doser <bernd.doser@h-its.org>",
    "Andreas Fehlner <andreas.fehlner@h-its.org>",
    "Sebastian T. Gomez <sebastian.trujillogomez@h-its.org>",
]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/HITS-AIN/hipster"
packages = [
    { include = "hipster", from = "src" },
]
include = [
    { path = "tests", format = "sdist" },
]

[tool.poetry.scripts]
hipster = 'hipster.main:main'

[tool.poetry.dependencies]
astropy = "^6.1.7"
gaiaxpy = "^2.1.2"
healpy = "^1.18"
jsonargparse = {extras = ["omegaconf"], version = "^4.37"}
matplotlib = "^3.10.0"
onnxruntime-gpu = "^1.21"
pandas = "^2.2.3"
pyarrow = "^20.0"
python = ">=3.10,<4.0"
scipy = "^1.15.1"
tqdm = "^4.67.1"
jinja2 = "^3.1.6"
streamlit = "^1.45.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2"
ipykernel = "^6.29.5"
pytest = "^8.3.4"

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[[tool.poetry.source]]
name = "pytorch-nightly-cu121"
url = "https://download.pytorch.org/whl/nightly/cu121"
priority = "explicit"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
timeout = 300
testpaths = 'tests'
xfail_strict = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore:The 'train_dataloader' does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument",
    "ignore:torch.onnx.dynamo_export only implements opset version 18 for now.",
    "ignore:GPU available but not used.",
    "ignore:You requested to overfit but enabled train dataloader shuffling.",
]

[tool.pylint.TYPECHECK]
generated-members = 'numpy.*, torch.*'
